implmeneted modal dialog

--- a/src/App.css
+++ b/src/App.css
@@ -35,3 +35,15 @@
     transform: rotate(360deg);
   }
 }
+
+
+.fadeshow {
+  animation-name: animeFadeShow;
+  animation-duration: .2s;
+  animation-iteration-count: 1;
+}
+
+@keyframes animeFadeShow {
+  from {scale:0;}
+  to {scale:1;}
+}
